samples/_failures_safe/1761460926_ead48b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f547163d.c: In function ‘main’:
./samples/SAFE/__tmp_f547163d.c:161:1: error: expected declaration or statement at end of input
  161 | int main(void) {
      | ^~~
